--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.10.0",
