--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "bcryptjs-react": "^2.4.6",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "jquery": "^3.6.4",
