--- a/canadaredux/src/config.json
+++ b/canadaredux/src/config.json
@@ -1,3 +1,4 @@
 {
-  "API_URL": "http://localhost:3001/api"
+  "API_URL": "http://localhost:3001/api",
+  "DOC_DOWNLOAD_PATH": "http://localhost:3001/docs/"
 }
