--- a/canadaredux/src/config.json
+++ b/canadaredux/src/config.json
@@ -1,4 +1,4 @@
 {
   "API_URL": "http://localhost:3001/api",
-  "DOC_DOWNLOAD_PATH": "http://localhost:3001/docs/"
+  "DOC_DOWNLOAD_PATH": "http://localhost:3001/api/order/docs/"
 }
