--- a/canadaredux/package.json
+++ b/canadaredux/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "date-fns": "^2.30.0",
     "formik": "^2.2.9",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-data-table-component": "^7.5.3",
