--- a/canadaredux/package.json
+++ b/canadaredux/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
+    "style-component": "^0.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.0"
   },
