--- a/canadaredux/package.json
+++ b/canadaredux/package.json
@@ -19,12 +19,12 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
-    "style-component": "^0.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.0"
   },
